--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-10 23:35:44
+lastsearch = 2024-07-11 04:18:21
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = 9.5%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://songhong.info/chan-ga-goi-uc018
+match = -71.4%%
+title = Chăn ga gối mã DN18-04 vải MicroSH khuyến mại -50%%
+url = https://songhong.info/chan-ga-goi-micro-dn1804
 
 [www.diepxuan.com]
 match = -81.0%%
