--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-11 03:36:29
+lastsearch = 2024-07-11 04:16:38
 
 [chieutruc.info]
 match = -73.9%%
@@ -22,9 +22,9 @@ title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
 url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
-url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
+match = -60.9%%
+title = Chiếu trúc tre Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-tre-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.239730392.7634523024
 
 [www.lazada.vn]
 match = 21.7%%
