--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-11 01:46:37
+lastsearch = 2024-07-11 04:19:16
 
 [www.lazada.vn]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
 url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
-match = -56.5%%
-title = Chiếu nhựa Thái Bình hàng đẹp đủ kích thước (giao màu ...
-url = https://shopee.vn/Chiếu-nhựa-Thái-Bình-hàng-đẹp-đủ-kích-thước-(giao-màu-ngẫu-nhiên)-i.11224869.4214648023
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [trangvangvietnam.com]
 match = 21.7%%
