--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-10 23:53:59
+lastsearch = 2024-07-11 04:20:27
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Thảm giường II 180x200
-url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 180x200
+url = https://www.diepxuan.com/tham-giuong-bode-180x200.html
 
 [demxanh.com]
-match = -9.1%%
-title = Thảm trải giường cao su non màu trắng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-trang.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -113.6%%
