--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-11 03:52:02
+lastsearch = 2024-07-11 04:13:02
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -12,9 +12,9 @@ title = Alexandre Chan
 url = https://profiles.icts.uci.edu/alexandre.chan
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -142.1%%
-title = Intensive blood pressure reduction with intravenous ...
-url = https://pubmed.ncbi.nlm.nih.gov/30739745/
+match = -178.9%%
+title = Identification of 12 new susceptibility loci for different ...
+url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
 match = -21.1%%
@@ -320,4 +320,9 @@ url = https://www.judcom.nsw.gov.au/publications/benchbks/sentencing/table_of_ca
 match = -73.7%%
 title = Little Profiles - Asian Student Alliance
 url = http://www.pittasa.com/little-profiles
+
+[www.instagram.com]
+match = -110.5%%
+title = HAPPY GRADUATION DAY TO OUR AMAZING SENIORS!!!!!
+url = https://www.instagram.com/p/C6SFe02u4bb/
 
