--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-11 04:35:14
+lastsearch = 2024-07-11 05:19:39
 
 [shopee.vn]
-match = -54.2%%
-title = Chiếu điều hòa, sợi mây tổng hợp, loại 1 mặt sau dệt sợi tơ
-url = https://shopee.vn/Chiếu-điều-hòa-sợi-mây-tổng-hợp-loại-1-mặt-sau-dệt-sợi-tơ-i.953354676.19573140759
+match = -33.3%%
+title = CHIẾU ĐIỀU HOÀ MÂY LOẠI 1 ĐỦ KÍCH THƯỚC , GIÁ TẠI ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-MÂY-LOẠI-1-ĐỦ-KÍCH-THƯỚC-GIÁ-TẠI-XƯỞNG-SẢN-XUẤT--i.46360011.4028012766
 
 [www.diepxuan.com]
 match = 100.0%%
