--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-11 01:19:33
+lastsearch = 2024-07-11 05:13:49
 
 [shopee.vn]
-match = -4.2%%
-title = Thảm lau chân LEN MỊN thấm hút tốt KHỔ 40*60cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-KHỔ-40*60cm-i.11468657.7058301396
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -17,9 +17,9 @@ title = Thảm lau chân lông xù hình học thấm nước, chống trượt 
 url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
-match = -41.7%%
-title = Thảm chùi chân 40x60 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm chùi chân 40x60
+match = -54.2%%
+title = Thảm lau chân, siêu thấm cao cấp room mat 40x60 ( Đồ ...
+url = https://tiki.vn/tham-lau-chan-sieu-tham-cao-cap-room-mat-40x60-do-gia-dung-nhu-y-p181147569.html
 
 [www.thamminhquang.vn]
 match = 33.3%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-vih/product/tham-len-hinh-thu-40x60-cm-8936186271359-p46359
+url = https://www.lottemart.vn/vi-cto/product/tham-len-hinh-thu-40x-60-cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
