--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-11 02:52:41
+lastsearch = 2024-07-11 05:12:33
 
 [erado.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Tham trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=tham trải giường
 
 [noithattamviet.net]
-match = -30.0%%
-title = Giường bọc nhung gỗ công nghiệp GB-14
-url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
+match = -10.0%%
+title = Giường ngủ gỗ công nghiệp GCN-14
+url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
 
 [nemphuoclong.vn]
 match = -55.0%%
@@ -152,8 +152,8 @@ title = Giường ngủ tích hợp kệ sách trang trí và bàn làm việc G
 url = https://zatafu.com/giuong-ngu-tich-hop-ke-sach-trang-tri-va-ban-lam-viec-gg-14
 
 [giuongngugiare.vn]
-match = -65.0%%
-title = giường ngủ giá rẻ 14 - Nội Thất Công Hậu
+match = 35.0%%
+title = giường ngủ giá rẻ 14
 url = https://giuongngugiare.vn/giuong-ngu-gia-re-14
 
 [mdland.com.vn]
