--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-11 04:26:59
+lastsearch = 2024-07-11 05:12:22
 
 [www.lazada.vn]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = -100.0%%
@@ -152,9 +152,9 @@ title = JAL JEEVAN MISSION
 url = https://jalshakti-ddws.gov.in/sites/default/files/JJM_Operational_Guidelines.pdf
 
 [mohua.gov.in]
-match = -16.7%%
-title = URDPFI Guidelines Vol I.pdf
-url = https://mohua.gov.in/upload/uploadfiles/files/URDPFI Guidelines Vol I.pdf
+match = -5.6%%
+title = URDPFI Guidelines, 2014
+url = https://mohua.gov.in/upload/uploadfiles/files/URDPFI Guidelines Vol I(2).pdf
 
 [en.wikipedia.org]
 match = -5.6%%
