--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-10 20:27:17
+lastsearch = 2024-07-11 09:46:42
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -133.3%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -120.0%%
+title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -92,9 +92,9 @@ title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
 url = https://m.facebook.com/groups/hoiktxkhub/posts/2380397375674061/
 
 [www.diepxuan.com]
-match = 0.0%%
-title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+match = -13.3%%
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [huongtruc.com]
 match = -213.3%%
