--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-11 09:11:37
+lastsearch = 2024-07-11 09:53:10
 
 [demxanh.com]
 match = -135.3%%
@@ -47,9 +47,9 @@ title = chiếu trúc hạt nâu đen
 url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [chieutrelanlan.com]
-match = -94.1%%
-title = Chiếu trúc cao cấp Việt Nam thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -58.8%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-120x190cm-35.html
 
 [chieu.com.vn]
 match = 41.2%%
