--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-11 06:47:23
+lastsearch = 2024-07-11 09:51:09
 
 [www.gov.uk]
 match = -200.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -233.3%%
-title = Evangeli Basun [weekly]. - Volume 6 - Google Books Result
-url = https://books.google.com/books?id=X58zAQAAMAAJ&pg=RA7-PP1&lpg=RA7-PP1&dq=man+re+trang+16&source=bl&ots=s1SNeA2ElH&sig=ACfU3U2IQ2fl47sAAViL4FtKOxxBt8Ad2g&hl=en&sa=X&ved=2ahUKEwjyzOqk1J2HAxVolokEHfueBIcQ6AF6BAhMEAM
+match = -260.0%%
+title = Department of the Army Pamphlet - Page 153 - Google Books Result
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPlxQCRQe&sig=ACfU3U0D3KMr5lBwtqeq-EXfcW1oCQx8VA&hl=en&sa=X&ved=2ahUKEwiemqOu_Z2HAxVmM1kFHXSwCrAQ6AF6BAgmEAM
 
 [www.nolo.com]
 match = 0.0%%
