--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-11 02:47:59
+lastsearch = 2024-07-11 09:48:06
 
 [www.youtube.com]
-match = -420.0%%
-title = A Date With Ren? Don't Worry About It | 14 Days With You ...
-url = https://www.youtube.com/watch?v=pjfU1xhfUrg
+match = -390.0%%
+title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
+url = https://www.youtube.com/watch?v=dS5JtXqOR-I
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
+title = 14 Days With You by cutiesai - itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
@@ -132,8 +132,8 @@ title =
 url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gjate-ne-bote
 
 [www.reddit.com]
-match = -340.0%%
-title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
+match = -100.0%%
+title = Ren's dying in V14 (maybe)
 url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
 
 [www.maciociaonline.com]
