--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-11 06:53:23
+lastsearch = 2024-07-11 09:52:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Thảm giường II 160x200
 url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 02
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = -122.7%%
+title = 2 giường chống thấm nước Bìa co giãn thoáng khí Vỏ bọc nệm ...
+url = https://www.lazada.vn/products/2-giuong-chong-tham-nuoc-bia-co-gian-thoang-khi-vo-boc-nem-cho-phong-khach-boc-nem-cho-nu-hoang-vua-kich-thuoc-doi-160x200-i2361347002.html
 
 [www.sendo.vn]
 match = 4.5%%
@@ -42,8 +42,8 @@ title = Thảm chân giường
 url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
-match = -100.0%%
-title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
+match = -72.7%%
+title = 5 loại thảm trải giường hot nhất hiện nay - Cafeland
 url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
 
 [noithatviva.vn]
