--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-11 04:20:27
+lastsearch = 2024-07-11 09:48:55
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 180x200
-url = https://www.diepxuan.com/tham-giuong-bode-180x200.html
+match = 100.0%%
+title = Thảm giường II 180x200
+url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu
+match = -68.2%%
+title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
+url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
 match = -166.7%%
