--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-11 03:18:35
+lastsearch = 2024-07-11 10:16:01
 
 [www.youtube.com]
 match = -162.5%%
@@ -42,9 +42,9 @@ title = Doanh nhân Đài Loan bất ngờ qua đời khi muốn rút tài sản
 url = https://trithucvn.co/trung-quoc/doanh-nhan-dai-loan-bat-ngo-qua-doi-khi-muon-rut-tai-san-khoi-trung-quoc.html
 
 [books.google.com]
-match = -116.0%%
-title = Trung Xô Mỹ Cuộc Đối Đầu Lịch Sử - Page 637 - Google Books Result
-url = https://books.google.com/books?id=xfvcEAAAQBAJ&pg=PA637&lpg=PA637&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=qWSSKHddEy&sig=ACfU3U07xu6egh7yRVYeTlOiX10KkkqpBw&hl=en&sa=X&ved=2ahUKEwj6lOjOpZ2HAxXkrokEHafjBe0Q6AF6BAgTEAM
+match = -96.0%%
+title = Địa chí Tiền Giang - Volume 1 - Page 921 - Google Books Result
+url = https://books.google.com/books?id=bqQMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=31InpLpkQn&sig=ACfU3U30_be7k_mLk87YhTdr2-dAsf8QAQ&hl=en&sa=X&ved=2ahUKEwjtuOn1gp6HAxXuFFkFHc7WDBQQ6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -80.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = -92.0%%
-title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
-url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
+match = -16.0%%
+title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
+url = https://www.facebook.com/groups/anchoidailoan/
 
 [baotintuc.vn]
 match = -72.0%%
